<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Beam Remote</string>
    <string name="apps">Apps</string>
    <string name="beam_disconnected">Your beam has disconnected... Please try again</string>
    <string name="btn_actions">ACTIONS</string>
    <string name="btn_allapps">ALL APPS</string>
    <string name="btn_back">BACK</string>
    <string name="btn_gallery">GALLERY</string>
    <string name="btn_home">HOME</string>
    <string name="btn_keyboard">KEYBOARD</string>
    <string name="btn_keypad">KEYPAD</string>
    <string name="btn_keystone">KEYSTONE</string>
    <string name="btn_less">LESS</string>
    <string name="btn_light">LIGHT</string>
    <string name="btn_more">MORE</string>
    <string name="btn_ok">OK</string>
    <string name="btn_onOff">ON/OFF</string>
    <string name="btn_recent">RECENT</string>
    <string name="btn_reconnect">Reconnect</string>
    <string name="btn_rotate">ROTATE</string>
    <string name="btn_screenBrightness">SCREEN BRIGHTNESS</string>
    <string name="btn_sets">SETS</string>
    <string name="btn_settings">SETTINGS</string>
    <string name="btn_touchpad">TOUCHPAD</string>
    <string name="btn_try_again">Try again</string>
    <string name="btn_volume">VOLUME</string>
    <string name="click">Click</string>
    <string name="connect_to_same_wifi_turn_on_bluetooth_in_beam">Please connect to the same wifi network as Beam / Turn on bluetooth in Beam</string>
    <string name="connect_to_same_wifi_turn_on_bluetooth_in_device">Please connect to the same network as Beam / Turn on bluetooth on your device</string>
    <string name="connecting_to_beam">Connecting to Beam...</string>
    <string name="connecting_to_bluetooth">Connecting to bluetooth</string>
    <string name="connection_to_beam_failed">Connection to Beam failed. Try again</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content" />
    <string name="find_more_beams">FIND MORE BEAMS...</string>
    <string name="flip_screen">Flip Screen</string>
    <string name="hide_projector_light">Switch to projector</string>
    <string name="hold_to_grab">Hold to grab</string>
    <string name="home">Home</string>
    <string name="keyboard">Keyboard</string>
    <string name="lost_connectivity">Lost Connectivity</string>
    <string name="my_beam">MY BEAM</string>
    <string name="no_bluetooth_devices_dialog">Sorry no Beams discovered !! Make sure you are closer to the Beam and then try again</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="scanning_for_beams">Scanning for Beams...</string>
    <string name="screen">Screen</string>
    <string name="send_backspace">Send Backspace</string>
    <string name="splash_no_beam">No Beams found…</string>
    <string name="splash_searching">Searching for Beams…</string>
    <string name="splash_try_again">Try again</string>
    <string name="still_scanning_for_beams">Still scanning for beams...</string>
    <string name="title_activity_app_list">appListActivity</string>
    <string name="title_activity_keyboard_control">keyboardControl</string>
    <string name="title_activity_mouse">MouseActivity</string>
    <string name="title_activity_select_bulb">selectBulb</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_select_bulb">Please select the Beam you want to control right now</string>
    <string name="turn_off_data_dialog">"Beam Remote can't find your Beam. Please disable mobile data in settings and try again"</string>
    <string name="turn_on_wifi_bluetooth">Please turn on wifi/bluetooth and try again</string>
    <string name="turn_on_wifi_to_stream_photos">Please connect to the same wifi network as Beam and enjoy streaming your pictures!</string>
    <string name="turning_on_bluetooth">Turning on bluetooth</string>
    <string name="update_beam_service">Please follow the instructions on Beam to update Beam Service and enjoy streaming your pictures!</string>
    <string name="your_text">Your text</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
</resources>
