<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/mainmain" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:background="@color/beam_gray" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceEditText android:textSize="19.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/title_edit_text" android:background="@android:color/transparent" android:paddingLeft="5.0dip" android:paddingTop="15.0dip" android:paddingRight="0.0dip" android:paddingBottom="15.0dip" android:clickable="true" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/my_beam" android:drawableLeft="@drawable/logo_invert_small" android:drawablePadding="5.0dip" android:layout_weight="1.0" android:inputType="textCapCharacters" android:imeOptions="actionDone" android:onClick="onTitleClick" android:textCursorDrawable="@null" />
        <ImageView android:id="@id/connectionType" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/wifi" />
        <ImageView android:id="@id/title_disclosure" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:clickable="true" android:layout_width="wrap_content" android:layout_height="fill_parent" android:src="@drawable/arrow_down" android:onClick="onTitleClick" />
    </LinearLayout>
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <fragment android:id="@id/projector_light_ui" android:layout_width="fill_parent" android:layout_height="fill_parent" class="com.studiodiip.bulbbeam.mousecontroller.fragment.ProjectorLightFragment" />
        <RelativeLayout android:id="@id/default_ui" android:background="@color/black" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:orientation="horizontal" android:id="@id/tab_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
                <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceTextView android:textColor="@color/white" android:id="@id/tab_keypad" android:text="@string/btn_keypad" style="@style/TabBarButton" />
                <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceTextView android:id="@id/tab_touchpad" android:text="@string/btn_touchpad" style="@style/TabBarButton" />
                <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceTextView android:id="@id/tab_keyboard" android:text="@string/btn_keyboard" style="@style/TabBarButton" />
                <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceTextView android:textColor="@color/white" android:id="@id/tab_gallery" android:text="@string/btn_gallery" style="@style/TabBarButton" />
            </LinearLayout>
            <FrameLayout android:id="@id/content_frame" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/tab_bar" />
            <LinearLayout android:orientation="vertical" android:id="@id/bottom_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/bottom_bar_top" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_back" android:text="@string/btn_back" android:drawableTop="@drawable/ic_back" style="@style/ActionButton" />
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_home" android:text="@string/btn_home" android:drawableTop="@drawable/ic_home" style="@style/ActionButton" />
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_rotate" android:text="@string/btn_rotate" android:drawableTop="@drawable/ic_rotate" style="@style/ActionButton" />
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_sets" android:visibility="gone" android:text="@string/btn_sets" android:drawableTop="@drawable/ic_sets" style="@style/ActionButton" />
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_multitask" android:visibility="gone" android:text="@string/btn_recent" android:drawableTop="@drawable/ic_multitask" style="@style/ActionButton" />
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_onoff" android:text="@string/btn_onOff" android:drawableTop="@drawable/ic_onoff" style="@style/ActionButton" />
                    <View android:background="@color/white" android:layout_width="1.0px" android:layout_height="fill_parent" android:layout_marginTop="7.0sp" />
                    <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_moreless" android:text="@string/btn_more" android:drawableTop="@drawable/ic_more" style="@style/ActionButton" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/bottom_bar_extended" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_all_apps" android:text="@string/btn_allapps" android:drawableTop="@drawable/ic_all_apps" style="@style/ActionButton" />
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_settings" android:text="@string/btn_settings" android:drawableTop="@drawable/ic_settings" style="@style/ActionButton" />
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_rotate_bot" android:visibility="gone" android:text="@string/btn_rotate" android:drawableTop="@drawable/ic_rotate" style="@style/ActionButton" />
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_sets_bot" android:text="@string/btn_sets" android:drawableTop="@drawable/ic_sets" style="@style/ActionButton" />
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_multitask_bot" android:visibility="gone" android:text="@string/btn_recent" android:drawableTop="@drawable/ic_multitask" style="@style/ActionButton" />
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_actions" android:text="@string/btn_actions" android:drawableTop="@drawable/ic_actions" style="@style/ActionButton" />
                        <View android:background="@color/white" android:layout_width="1.0px" android:layout_height="fill_parent" />
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_light" android:text="@string/btn_light" android:drawableTop="@drawable/ic_light" style="@style/ActionButton" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_volume" android:padding="0.0dip" android:text="@string/btn_volume" android:drawableTop="@null" style="@style/ActionButton" />
                        <SeekBar android:id="@id/volumeSeekBar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:indeterminate="false" android:progressDrawable="@drawable/styled_progress" android:thumb="@drawable/seekbar_thumb" android:layout_weight="4.0" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_keystone" android:padding="0.0dip" android:text="@string/btn_keystone" android:drawableTop="@null" style="@style/ActionButton" />
                        <SeekBar android:id="@id/keystoneSeekBar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:indeterminate="false" android:progressDrawable="@drawable/styled_progress" android:thumb="@drawable/seekbar_thumb" android:layout_weight="4.0" />
                    </LinearLayout>
                    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <com.studiodiip.bulbbeam.mousecontroller.view.TypefaceButton android:id="@id/btn_screenBrightness" android:padding="0.0dip" android:text="@string/btn_screenBrightness" android:drawableTop="@null" style="@style/ActionButton" />
                        <SeekBar android:id="@id/screenBrightnessSeekBar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:indeterminate="false" android:progressDrawable="@drawable/styled_progress" android:thumb="@drawable/seekbar_thumb" android:layout_weight="4.0" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
        <FrameLayout android:id="@id/title_dropdown_wrapper" android:background="@color/black_overlay" android:visibility="invisible" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:onClick="onTitleDropdownWrapperClick">
            <ListView android:id="@id/title_dropdown_listview" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        </FrameLayout>
    </FrameLayout>
</LinearLayout>